--- a/src/main/webapp/templates/base.xhtml
+++ b/src/main/webapp/templates/base.xhtml
@@ -6,7 +6,7 @@
       xmlns:a="http://xmlns.jcp.org/jsf/passthrough"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
-        <title>Insert title here</title>
+        <title>Single page app</title>
 	    
         <h:outputStylesheet name="bootstrap.min.css" library="css" />
         <h:outputStylesheet name="font-awesome.min.css" library="css" />
@@ -20,9 +20,6 @@
         <f:loadBundle var="pMsg" basename="products" />
     </h:head>
     <h:body>
-        <ui:insert name="menu">
-			<ui:include src="menu.xhtml" />
-		</ui:insert>
         <ui:insert name="header">
 			<ui:include src="header.xhtml" />
 		</ui:insert>
