--- a/src/main/webapp/templates/content.xhtml
+++ b/src/main/webapp/templates/content.xhtml
@@ -1,8 +1,9 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+	<ui:composition xmlns="http://www.w3.org/1999/xhtml"
 				xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 				xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:c="http://java.sun.com/jsp/jstl/core">  
+                
 	<!-- Product Section Begin -->
 	<section class="product spad">
 	    <div class="container">
@@ -15,9 +16,7 @@
 	            <div class="col-lg-8 col-md-8">
 	                <ul class="filter__controls">
 	                    <li class="active" data-filter="*">Tất cả</li>
-	                    <li data-filter=".men">Nam</li>
-	                    <li data-filter=".kid">Phụ kiện</li>
-	                    <li data-filter=".accessories">Hộp quà tặng</li>
+	                    <li data-filter=".men">Danh mục</li>
 	                    <!--<li data-filter=".cosmetic">Cosmetics</li>-->
 	                </ul>
 	            </div>
@@ -33,7 +32,7 @@
 	                        <div class="text-center">
 	                        	<h:form>
 			                    	<h:commandButton value="#{pMsg['product.addToCart']}" styleClass="btn btn-warning">
-			                            <f:ajax listener="#{cartBean.addItemToCart(p.id,p.name,p.price)}" />
+			                    		<f:ajax event="click" render="bag_value" listener="#{cartBean.addItemToCart(p.id,p.name,p.price)}"/>
 			                        </h:commandButton>
 			                        <h:commandButton value="#{pMsg['product.detail']}" styleClass="btn btn-info"/>
 			                    </h:form>
