--- a/src/main/webapp/templates/footer.xhtml
+++ b/src/main/webapp/templates/footer.xhtml
@@ -56,7 +56,7 @@
 	            <div class="col-lg-12">
 	                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 	                <div class="footer__copyright__text">
-	                    <p>Copyright <script>document.write(new Date().getFullYear());</script> <i class="fa fa-heart" aria-hidden="true"></i></p>
+	                    <p>Copyright <script>document.write(new Date().getFullYear());</script> </p>
 	                </div>
 	                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 	            </div>
