--- a/src/main/webapp/templates/header.xhtml
+++ b/src/main/webapp/templates/header.xhtml
@@ -1,7 +1,8 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:c="http://java.sun.com/jsp/jstl/core">
 	<!-- Header Section Begin -->
 	<header class="header">
 		<div class="container-fluid">
@@ -15,16 +16,18 @@
 				</div>
 				<div class="col-xl-6 col-lg-7">
 					<nav class="header__menu">
-						<ul>
-							<li class="active"><a href="./index.html">TRANG CHỦ</a></li>
-							<li><a href="#">Danh mục</a>
-								<ul class="dropdown">
-									<c:forEach var="cat" items="#{cateBean.categories}">
-										<li><a href="#">#{cat.name}</a></li>
-									</c:forEach>
-								</ul></li>
-							<li><a href="shop-cart">Giỏ hàng</a></li>
-						</ul>
+						<h:form>
+					        <f:ajax render=":content">
+					            <ul>
+					            	<li><h:commandLink value="All products" action="#{bean.setPage('content')}" /></li>  
+					                <li><h:commandLink value="product-list" action="#{bean.setPage('product-list')}" /></li>            
+					                <!-- <li><h:commandLink value="products" action="#{bean.setPage('products')}" /></li> -->            
+					                <li><h:commandLink value="login" action="#{bean.setPage('login')}" /></li>
+					                <li><h:commandLink value="register" action="#{bean.setPage('register')}" /></li>
+					                <li><h:commandLink value="payment" action="#{bean.setPage('payment')}" /></li>            
+					            </ul>
+					        </f:ajax>
+					    </h:form>
 					</nav>
 				</div>
 				<div class="col-lg-3">
